--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,1 +1,11 @@
-
+    <!-- Projects Section -->
+    <section id="projects" class="content-section text-center">
+        <div class="projects-section">
+            <div class="container">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h2>Projects</h2>
+                    <a href="https://drive.google.com/file/d/10zG8NzOhjt_NCck3gm29ZQirzPODrZMP/view?usp=drive_link" class="btn btn-default btn-lg">View my full resume</a>
+                </div>
+            </div>
+        </div>
+    </section>
