--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -7,4 +7,24 @@
             </div>
         </div>
     </div>
+    <div class="wrapper">
+    <div class="media">
+    <div class="layer">
+        <p>US Campaign and Congressional Voting Behavior</p>
+      </div>
+    <img src="https://github.com/jjoehnk/jjoehnk.github.io/blob/main/img/portfolio-electoral-funding.png" alt="" />
+    </div>
+    <div class="media">
+    <div class="layer">
+        <p>Wind Market Data Sprint</p>
+      </div>
+    <img src="https://github.com/jjoehnk/jjoehnk.github.io/blob/main/img/portfolio-wind-sprint.png" alt="" />
+    </div>
+       <div class="media">
+    <div class="layer">
+        <p>Ride Share Infrastructure</p>
+      </div>
+    <img src="https://github.com/jjoehnk/jjoehnk.github.io/blob/main/img/portfolio-rider-share-analysis.png" alt="" />
+    </div>
+    </div>
 </section>
