--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     {% include nav.html %}
     {% include header.html %}
     {% include about.html %}
-    {% include projects.html %}
+    {% include portfolio.html %}
     {% include resume.html %}
     {% include contact.html %}
     {% include footer.html %}
