--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% include resume.html %}
     {% include contact.html %}
     {% include footer.html %}
+    {% include modals.html %}
     {% include js.html %}
     </body>
 </html>
