--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -259,11 +259,14 @@ a:focus {
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: rgba(255,255,255,.3);
 }
 
 .portfolio-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
+    color: rgba(255,255,255,.3);
 }
 
 .portfolio-modal .modal-content img {
