--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -260,13 +260,13 @@ a:focus {
     -webkit-box-shadow: none;
     box-shadow: none;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #000000;
+    color: {{ site.color.links }};
 }
 
 .portfolio-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
-    color: #000000;
+    color: {{ site.color.links }};
 }
 
 .portfolio-modal .modal-content img {
