--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,16 +1,16 @@
 <!-- Portfolio Grid Section -->
-<section id="portfolio">
-  <div class="container portfolio-flex-grid">
+<section id="projects">
+  <div class="container projects-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Portfolio</h2>
+        <h2>Projects</h2>
         <hr class="star-primary">
       </div>
     </div>
-    <div class="portfolio-flex-row">
+    <div class="projects-flex-row">
       {% for post in site.posts %}
-      <div class="portfolio-flex-item portfolio-item">
-        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+      <div class="portfolio-flex-item projects-item">
+        <a href="#portfolioModal-{{ post.modal-id }}" class="projects-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
               <i class="fa fa-search-plus fa-3x"></i>
