--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -173,19 +173,19 @@ a:focus {
         font-size: 25px;
     }
 }
-#portfolio .portfolio-item {
+#projects .projects-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#projects .projects-item .projects-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption {
+#projects .projects-item .projects-link .caption {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -196,11 +196,11 @@ a:focus {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption:hover {
+#projects .projects-item .projects-link .caption:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+#projects .projects-item .projects-link .caption .caption-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -211,46 +211,46 @@ a:focus {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+#projects .projects-item .projects-link .caption .caption-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+#projects .projects-item .projects-link .caption .caption-content h3,
+#projects .projects-item .projects-link .caption .caption-content h4 {
     margin: 0;
 }
 
-#portfolio * {
+#projects * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    #projects .projects-item {
         margin: 0 0 30px;
     }
 }
 
-/* Flexbox Portfolio Grid */
+/* Flexbox projects Grid */
 @media (min-width: 640px) {
-    .portfolio-flex-grid .portfolio-flex-row {
+    .projects-flex-grid .pprojects-flex-row {
       display: flex;
       flex-flow: row wrap;
       align-items: stretch;
       justify-content: space-between;
     }
-    .portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
+    .projects-flex-grid .projects-flex-row .projects-flex-item {
       flex: 1 0 49%;
       max-width: 49%;
     }
   }
   @media (min-width: 960px) {
-    .portfolio-flex-grid .portfolio-flex-row .portfolio-flex-item {
+    .projects-flex-grid .projects-flex-row .projects-flex-item {
       flex: 1 0 32%;
       max-width: 32%;
     }
   }
 
-.portfolio-modal .modal-content {
+.projects-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
     border: 0;
@@ -263,21 +263,21 @@ a:focus {
     color: {{ site.color.links }};
 }
 
-.portfolio-modal .modal-content h2 {
+.projects-modal .modal-content h2 {
     margin: 0;
     font-size: 3em;
     color: {{ site.color.links }};
 }
 
-.portfolio-modal .modal-content img {
+.projects-modal .modal-content img {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content .item-details {
+.projects-modal .modal-content .item-details {
     margin: 30px 0;
 }
 
-.portfolio-modal .close-modal {
+.projects-modal .close-modal {
     position: absolute;
     top: 25px;
     right: 25px;
@@ -287,11 +287,11 @@ a:focus {
     cursor: pointer;
 }
 
-.portfolio-modal .close-modal:hover {
+.projects-modal .close-modal:hover {
     opacity: .3;
 }
 
-.portfolio-modal .close-modal .lr {
+.projects-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
     height: 75px;
@@ -302,7 +302,7 @@ a:focus {
     transform: rotate(45deg);
 }
 
-.portfolio-modal .close-modal .lr .rl {
+.projects-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
     height: 75px;
