--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,8 +9,8 @@
     </div>
     <div class="projects-flex-row">
       {% for post in site.posts %}
-      <div class="portfolio-flex-item projects-item">
-        <a href="#portfolioModal-{{ post.modal-id }}" class="projects-link" data-toggle="modal">
+      <div class="projects-flex-item projects-item">
+        <a href="#projectsModal-{{ post.modal-id }}" class="projects-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
               <i class="fa fa-search-plus fa-3x"></i>
