--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -283,6 +283,7 @@ a:focus {
     right: 25px;
     width: 75px;
     height: 75px;
+    color: {{ site.color.primary-dark }};
     background-color: transparent;
     cursor: pointer;
 }
