--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,8 +4,8 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
                 <p>I am a Data Analyst with a strong foundation in Political Science and non-profit Database Administration.</p>
-                <p></p>My passion for strengthening communities, combined with my expertise in social science research and over 4 years of experience in data administration, data analysis and database management, uniquely positions me to make a meaningful impact.</p> 
-                <p></p>I aim to leverage my skills in data visualization and data-driven decision-making to drive positive change in the realm of public policy.</p>
+                <p>My passion for strengthening communities, combined with my expertise in social science research and over 4 years of experience in data administration, data analysis and database management, uniquely positions me to make a meaningful impact.</p> 
+                <p>I aim to leverage my skills in data visualization and data-driven decision-making to drive positive change in the realm of public policy.</p>
             </div>
         </div>
     </section>
