--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -5,6 +5,12 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Resume</h2>
                     <a href="https://drive.google.com/file/d/10zG8NzOhjt_NCck3gm29ZQirzPODrZMP/view?usp=drive_link" class="btn btn-default btn-lg">View my full resume</a>
+                    <h3>Technologies</h3>
+                    <p>Python, SQL (PostgreSQL & MySQL), Tableau, Power BI, R, CRMs (Raiser's Edge & Salesforce)</p>
+                    <h3>Python Libraries</h3>
+                    <p>Pandas, NumPy, SciPy, Matplotlib, Seaborn, ggplot2, SQLite</p>
+                    <h3>Skills</h3>
+                    <p>Database Administration and Engineering, Data Visualization, Data Analysis, Data Transformation, ELT, Data Cleaning</p>
                 </div>
             </div>
         </div>
