--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -7,34 +7,14 @@
                     <a href="https://drive.google.com/file/d/10zG8NzOhjt_NCck3gm29ZQirzPODrZMP/view?usp=drive_link" class="btn btn-default btn-lg">View my full resume</a>
                     <p></p>
                     <h3>Technologies</h3>
-                    <p><ul>
-                    <li>Python</li>
-                    <li>SQL: PostgreSQL, MySQL</li>
-                    <li>Tableau</li>
-                    <li>Power BI</li>
-                    <li>R</li>
-                    <li>CRM: Raiser's Edge, Salesforce</li> 
-                    <li>Git/GitHub</li>
-                    </ul></p>
+                    <p>Python, SQL: PostgreSQL & MySQL, Tableau, Power BI, R, CRM: Raiser's Edge & Salesforce, Git/GitHub
+                    </p>
                     <h3>Libraries</h3>
-                    <p><ul>
-                    <li>Pandas</li>
-                    <li>NumPy</li>
-                    <li>SciPy</li>
-                    <li>Matplotlib</li>
-                    <li>Seaborn</li>
-                    <li>SQLite</li> 
-                    <li>ggplot2</li>
-                    </ul></p>
+                    <p>Pandas, NumPy, SciPy, Matplotlib, Seaborn, SQLite, ggplot2
+                    </p>
                     <h3>Skills</h3>
-                    <p><ul>
-                    <li>Database Administration and Engineering</li>
-                    <li>Data Visualization</li>
-                    <li>Data Analysis</li>
-                    <li>Data Transformation</li>
-                    <li>ELT</li>
-                    <li>Data Cleaning</li> 
-                    </ul></p>
+                    <p>Database Administration and Engineering, Data Visualization, Data Analysis, Data Transformation, ELT, Data Cleaning
+                    </p>
                 </div>
             </div>
         </div>
