--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -18,7 +18,15 @@ html {
 }
 
 h1,
-h2,
+h2 {
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    font-size: larger;
+    letter-spacing: 1px;
+}
+
 h3,
 h4,
 h5,
@@ -27,6 +35,7 @@ h6 {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
+    font-size: smaller;
     letter-spacing: 1px;
 }
 
