--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -34,7 +34,7 @@ h6 {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    font-size: larger;
+    font-size: 20px;
     letter-spacing: 1px;
 }
 
