--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -18,14 +18,7 @@ html {
 }
 
 h1,
-h2 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    letter-spacing: 1px;
-}
-
+h2,
 h3,
 h4,
 h5,
@@ -34,7 +27,6 @@ h6 {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    font-size: 20px;
     letter-spacing: 1px;
 }
 
