--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -28,9 +28,7 @@ h2 {
 }
 
 h3,
-h4,
-h5,
-h6 {
+h4 {
     margin: 0 0 35px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -38,6 +36,17 @@ h6 {
     font-size: medium;
     letter-spacing: 1px;
 }
+
+h5,
+h6 {
+    margin: 0 0 35px;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+    font-size: small;
+    letter-spacing: 1px;
+}
+
 p {
     margin: 0 0 25px;
     font-size: 18px;
