--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -18,32 +18,15 @@ html {
 }
 
 h1,
-h2 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    font-size: large;
-    letter-spacing: 1px;
-}
-
+h2,
 h3,
-h4 {
-    margin: 0 0 35px;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
-    font-size: medium;
-    letter-spacing: 1px;
-}
-
+h4,
 h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    font-size: small;
     letter-spacing: 1px;
 }
 
