--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -183,7 +183,7 @@ a:focus {
     display: block;
     position: relative;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 50px 0 150px 0;
     max-width: 400px;
 }
 
