--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -183,12 +183,12 @@ a:focus {
     display: block;
     position: relative;
     margin: 0 auto;
-    padding: 50px 0 150px 0;
     max-width: 400px;
 }
 
 #projects .projects-item .projects-link .caption {
     position: absolute;
+    padding: 50px 0;
     width: 100%;
     height: 100%;
     opacity: 0;
