--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,4 +1,4 @@
-<!-- Portfolio Grid Section -->
+<!-- Project Grid Section -->
 <section id="projects">
   <div class="container projects-flex-grid">
     <div class="row">
