--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -27,6 +27,7 @@ h6 {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
+    font-color: #000;
     letter-spacing: 1px;
 }
 
