--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -27,7 +27,7 @@ h6 {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
-    font-color: #000;
+    font-color: #fff;
     letter-spacing: 1px;
 }
 
