--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -138,7 +138,7 @@ a:focus {
     height: auto;
     padding: 100px 0;
     text-align: center;
-    color: #fff;
+    color: {{ site.color.primary-rgb }};
     background: url(/img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: {{ site.color.primary-dark }};
     -webkit-background-size: cover;
