--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -182,9 +182,9 @@ a:focus {
 
 #projects .projects-item .projects-link {
     display: block;
-    position: absolute;
+    position: relative;
     margin: 0 auto;
-    max-width: 1000px;
+    max-width: 1600px;
 }
 
 #projects .projects-item .projects-link .caption {
