--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -177,11 +177,11 @@ a:focus {
 
 #projects .projects-item {
     right: 0;
-    margin: 0 0 15px;
+    margin: 0 0 15px; 
 }
 
 #projects .projects-item .projects-link {
-    display: block;
+    display: flex;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
